Footer pages have been populated. Fixed sliding that was occuring horizontally. Footer still displaced. Footer does not overlap divs.

--- a/app/public/css/style.less
+++ b/app/public/css/style.less
@@ -185,7 +185,16 @@ a:active {
 body {
   background: @lightgrey;
   
+
+  
 }
+
+body,html {
+
+	  max-width: 100%;
+	  overflow-x: hidden;
+	height: 100%;
+  }
   
 
 .login-style {
@@ -287,3 +296,5 @@ tr {
 .form-control {
   margin-bottom: 5px;
 }
+
+
